--- a/djangoproject/app/static/main.css
+++ b/djangoproject/app/static/main.css
@@ -4,42 +4,45 @@ body {
     padding: 0;
 }
 
-#main-div{
- 
-    width: auto;
+#main-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: 100vh;
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
-
 .menu {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     padding: 10px;
 }
 
 .menu__item {
     list-style-type: none;
     font-size: larger;
-    margin: 0 10px; 
+    margin: 0 10px;
 }
 
 .menu__item.to-left {
     margin-right: 900px;
 }
+
 .menu__item a {
-    padding: 10px 20px; 
+    padding: 10px 20px;
     color: black;
     font-weight: bold;
     border-radius: 30px;
-    background-color: white; 
+    background-color: white;
 }
 
 .menu__item.to-right {
     margin-left: auto;
 }
+
 a {
     text-decoration: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,17 +51,45 @@ a {
 
 .menu__item:nth-last-child(2) a,
 .menu__item:last-child a {
-    background-color: brown;
-    padding: 10px 20px; 
+    background-color: blue;
     color: white;
-    font-weight: bold;
+    padding: 10px 20px;
+    border: none;
     border-radius: 30px;
+    cursor: pointer;
 }
-button{
 
-    background-color: brown;
-    padding: 10px 20px; 
+button {
+    background-color: blue;
     color: white;
-    font-weight: bold;
-    border-radius: 30px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
 }
+
+#list-section {
+    margin-top: 20px;
+}
+
+#list-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#list-section ul li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#list-section ul li form {
+    margin-left: 10px;
+}
+form input {
+    width: 40%;
+    border: 0.06rem solid #d2d2d2bf;
+    border-radius: 0.5rem;
+    padding: 1.25rem;
+    font-size: 1rem;
+  }
