--- a/djangoproject/app/templates/todo-list.html
+++ b/djangoproject/app/templates/todo-list.html
@@ -1,4 +1,3 @@
-<!-- todo-list.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,33 +8,34 @@
     <link rel="stylesheet" href="{% static 'todo-list.css' %}">
 </head>
 <body>
-    <h1>Add Task</h1>
+    <h1>{{ task_list.name }}</h1>
+    <h2>Add Task</h2>
     <form method="POST">
         {% csrf_token %}
-        {{ form.TaskName }}</br>
-        {{ form.TaskDescription }}</br>
-        {{ form.TaskTag }}</br>
+        {{ form.TaskName }}<br>
+        {{ form.TaskDescription }}<br>
+        {{ form.TaskTag }}<br>
         <button type="submit">Add</button>
     </form>
 
-    <h1>Your Tasks</h1>
+    <h2>Your Tasks</h2>
     
-    <form method="GET" action="{% url 'user_task_management' %}" class="filter">
-        <h2>Filter:</h2>
+    <form method="GET" action="{% url 'list_detail' task_list.id %}" class="filter">
+        <h3>Filter:</h3>
         <input placeholder="Enter Task Tag" type="text" id="filter_tag" name="filter_tag" value="{{ request.GET.filter_tag }}">
         <button type="submit">Filter</button>
     </form>
 
     <table class="tasks">
         <tr>
-            <td>Task Name:</td>
-            <td>Task Description:</td>
-            <td>Task Tag:</td>
-            <td>Task Create Time:</td>
-            <td>Status:</td>
-            <td>Actions:</td>
-            <td>Completed:</td>
-            <td>Task Note</td>
+            <th>Task Name:</th>
+            <th>Task Description:</th>
+            <th>Task Tag:</th>
+            <th>Task Create Time:</th>
+            <th>Status:</th>
+            <th>Actions:</th>
+            <th>Completed:</th>
+            <th>Task Note</th>
         </tr>
         {% for task in user_tasks %}
             <tr class="{% if task.completed %} completed {% endif %} {% if not task.completed %} notcompleted {% endif %}">
@@ -44,34 +44,30 @@
                 <td>{{ task.TaskTag }}</td>
                 <td>{{ task.TaskCreateTime }}</td>
                 <td>
-                    <form method="POST" action="{% url 'user_task_management' %}" >
+                    <form method="POST" action="{% url 'manage_task' task.id %}">
                         {% csrf_token %}
                         <input type="hidden" name="completed_task_id" value="{{ task.id }}">
                         <input type="checkbox" id="checkbox" name="task_completed" {% if task.completed %} checked {% endif %} onchange="this.form.submit()">
                     </form>
                 </td>
                 <td>
-                   <div class="actions">
-                    <form method="POST" action="{% url 'user_task_management' %}" class="actions">
-                        {% csrf_token %}
-                        <input type="hidden" name="edit_task" value="{{ task.id }}">
-                        <input type="text" name="TaskName" value="{{ task.TaskName }}" required>
-                        <input type="text" name="TaskDescription" value="{{ task.TaskDescription }}" required>
-                        <input type="text" name="TaskTag" value="{{ task.TaskTag }}" required>
-                        <input type="text" name="CompletedTaskNote" placeholder="Add note for completed task" style="display: {% if task.completed %} block; {% else %} none; {% endif %}">
-                        <button type="submit">Edit</button>
-                        
-                    </form>
-                    <form method="POST" action="{% url 'user_task_management' %}" class="actions">
-                        {% csrf_token %}
-                        <input type="hidden" name="delete_task" value="{{ task.id }}">
-                        <button type="submit">Delete Task</button>
-                    </form>
-                    
-                </div>
-               
+                    <div class="actions">
+                        <form method="POST" action="{% url 'manage_task' task.id %}" class="actions">
+                            {% csrf_token %}
+                            <input type="hidden" name="edit_task" value="{{ task.id }}">
+                            <input type="text" name="TaskName" value="{{ task.TaskName }}" required>
+                            <input type="text" name="TaskDescription" value="{{ task.TaskDescription }}" required>
+                            <input type="text" name="TaskTag" value="{{ task.TaskTag }}" required>
+                            <input type="text" name="CompletedTaskNote" placeholder="Add note for completed task" style="display: {% if task.completed %} block; {% else %} none; {% endif %}">
+                            <button type="submit">Edit</button>
+                        </form>
+                        <form method="POST" action="{% url 'manage_task' task.id %}" class="actions">
+                            {% csrf_token %}
+                            <input type="hidden" name="delete_task" value="{{ task.id }}">
+                            <button type="submit">Delete Task</button>
+                        </form>
+                    </div>
                 </td>
-              
                 <td>
                     {% if task.completed %}
                         Yes, at {{ task.completed_time }}
@@ -80,13 +76,12 @@
                     {% endif %}
                 </td>
                 <td style="display: {% if task.completed %} block; {% else %} none; {% endif %}">
-                    qsaeqw
+                    {{ task.completed_note }}
                 </td>
             </tr>
         {% empty %}
-            <tr><td colspan="7">No tasks found.</td></tr>
+            <tr><td colspan="8">No tasks found.</td></tr>
         {% endfor %}
     </table>
-
 </body>
 </html>
