--- a/djangoproject/app/static/main.css
+++ b/djangoproject/app/static/main.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 #main-div {
@@ -70,26 +71,49 @@ button {
 
 #list-section {
     margin-top: 20px;
+    width: 19%; 
 }
-
 #list-section ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 #list-section ul li {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    font-size: larger;
+}
+
+#list-section ul li a {
+    flex: 1;
+    display: inline-block;
+    padding: 10px;
+    text-align: left;
+    width: 100%; 
+    box-sizing: border-box;
 }
 
 #list-section ul li form {
-    margin-left: 10px;
+    margin-left: 15px;
 }
+
 form input {
     width: 40%;
     border: 0.06rem solid #d2d2d2bf;
     border-radius: 0.5rem;
     padding: 1.25rem;
     font-size: 1rem;
-  }
+}
+#nwm{
+    display: flex;
+    flex-direction: row;
+}
+#nwm input{
+    margin-right: 20px;
+    width: auto;
+}
+#add-list-form button{
+    height: 60px;
+}
