--- a/djangoproject/app/static/todo-list.css
+++ b/djangoproject/app/static/todo-list.css
@@ -85,3 +85,7 @@ input[type="checkbox"]:checked::after {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.red{
+    background-color: red;
+
+}  
